result/0526-103353/stderr.log
/home/runner/work/pgi-2025-the_visionary_compasses/pgi-2025-the_visionary_compasses/src/features.c:31:33: error: expected ‘;’, ‘,’ or ‘)’ before ‘_path’
   31 | void tenth_pixel ( char *source _path){
      |                                 ^~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_visionary_compasses/pgi-2025-the_visionary_compasses/src/main.c:4:9: fatal error: iostream: No such file or directory
    4 | #include<iostream>
      |         ^~~~~~~~~~
compilation terminated.
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2